# Hidden-State-Genomics

./: .Rhistory  .gitignore  .lintr  ESM-2.py  GRCh38p14_db_setup.py  KG_feature_diff.ipynb  LICENSE  README.md  SAE.ipynb  SAE_train.py  SP-SAE.ipynb  TFRecord_conversion.py  __main__.py  annotations.ipynb  autoencoder.py  autoencoder_serialization.ipynb  batch_train.sh  cnnresults.ipynb  conda_environment.yml  cpu_env.yaml  enrich.R  env.yaml  feat-struct-highlighting.ipynb  gpu_env.yaml  knowledge_graph_analysis.ipynb  manuscript.md  model.py  new_topo.ipynb  preprocessing.py  pyproject.toml  requirements.txt  streamlit_app.py  tpu_config.sh  tpu_config_test.py  transformer.py
.github/: copilot-instructions.md
HiddenStateGenomics/: __init__.py
Notebooks/: ESM_Embeddings.ipynb  autoencoder_serialization.ipynb  autoencoder_sparsity.ipynb  var_func_ESMembeddings.ipynb
bwt/: Cargo.toml  pyproject.toml
bwt/src/: lib.rs  main.rs
data/: Human_Hb_variants.fasta  af3_dnapos_kg.json  af3_rnapos_kg.json  cisplatin_pos_kg.json  external_tool_metadata.txt  feature_activation_stats.csv  hbvar-w-func-embed-seq.csv  hbvar_metadata_sequence_merge.csv  hbvar_with_embeddings.csv  pos_multiedge_genes.txt  refseq_cache.txt
docs/: intervention_operation.md  knowledge_graph_theory.md
environment/: env.yml  unittest.py
genome_databases/: erepo.tabbed.small.txt  erepo.tabbed.small2.txt  erepo.tabbed.v.small.txt  unittest.py
hsg/: sequence.py
models/: ESM-2-1280d-SAE-ef4.keras  ESM-2-1280d-SAE-ef4.weights.h5  autoencoder_test.keras  autoencoder_test.weights.h5  unittest.py
notebook_stash/: KG_feature_diff.ipynb  annotations.ipynb  cnnresults.ipynb  interpretability.ipynb  neg_knowledge_graph_analysis.ipynb  new_topo.ipynb  (+1 more)
(+4403 files in other folders)
